--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 To install:
 1. Install cmake and boost.
 2. 'cd /ethonmem/project/directory'
-3. 'cmake .'
+3. 'cmake -DCMAKE_BUILD_TYPE=Debug' or 'cmake -DCMAKE_BUILD_TYPE=Release' or 'cmake .'
 4. 'make'
 5. 'make install'
 
